updated CSS to match design

--- a/index.html
+++ b/index.html
@@ -27,31 +27,45 @@
             <address>New York, United States</address>
             <q>Front-end developer and avid gamer.</q>
             <ul>
-                <li><a href="https://github.com/EmLopezDev">Github</a></li>
                 <li>
-                    <a href="https://www.frontendmentor.io/profile/EmLopezDev"
+                    <a href="https://github.com/EmLopezDev" target="_blank"
+                        >Github</a
+                    >
+                </li>
+                <li>
+                    <a
+                        href="https://www.frontendmentor.io/profile/EmLopezDev"
+                        target="_blank"
                         >Frontend Mentor</a
                     >
                 </li>
                 <li>
-                    <a href="www.linkedin.com/in/emmanuel-lopez-a812b012"
+                    <a
+                        href="www.linkedin.com/in/emmanuel-lopez-a812b012"
+                        target="_blank"
                         >LinkedIn</a
                     >
                 </li>
-                <li><a href="https://x.com/emlopezdev">X</a></li>
                 <li>
-                    <a href="https://www.instagram.com/eman1mal_/">Instagram</a>
+                    <a href="https://x.com/emlopezdev" target="_blank">X</a>
+                </li>
+                <li>
+                    <a
+                        href="https://www.instagram.com/eman1mal_/"
+                        target="_blank"
+                        >Instagram</a
+                    >
                 </li>
             </ul>
         </main>
 
-        <footer class="attribution">
+        <footer>
             Challenge by
             <a
                 href="https://www.frontendmentor.io?ref=challenge"
                 target="_blank"
                 >Frontend Mentor</a
-            >. Coded by <a href="#">Your Name Here</a>.
+            >. Coded by <a href="#">Emmanuel Lopez</a>.
         </footer>
     </body>
 </html>
